--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <!-- main -->
     <div class="app" id="app" aria-label="Hyperion - Conteúdo">
       <nav class="menu" aria-label="Menu">
-        <a href="#home" data-target="home">Home</a>
+        <a href="#home" data-target="home" class="menu-logo" aria-label="Home">
+          <img src="images/Hyperion_Trees.png" alt="Home" />
+        </a>
         <a href="#manifesto" data-target="manifesto">Manifesto</a>
         <a href="#o-que-fazemos" data-target="o-que-fazemos">O que fazemos</a>
         <a href="#como-trabalhamos" data-target="como-trabalhamos">Como trabalhamos</a>
