Fav icon implementation, done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="stylesheet" href="styles.css">
 
+    <link rel="icon" href="images/favicon/favicon.ico" sizes="any">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600&family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
@@ -39,7 +44,7 @@
         <section class="panel is-active" id="home" data-panel>
           <div>
             <div class="kicker">Hyperion</div>
-            <h1>Escalar é consequência.<br/>Estrutura é decisão.</h1>
+            <h1 class="title-gold">Escalar é consequência.<br/>Estrutura é decisão.</h1>
             <p>
               A Hyperion é uma consultoria de software focada em <span class="accent">engenharia, arquitetura e sustentação</span>.
               Pouco ruído. Decisão técnica com propósito.
