Footer added and golden line for menu.

--- a/index.html
+++ b/index.html
@@ -167,5 +167,14 @@
         }
       });
     </script>
+
+    <footer class="footer">
+      <div class="footer-line"></div>
+
+      <div class="footer-content">
+        <span>© Hyperion ∴ Estruturas que sustentam crescimento</span>
+      </div>
+    </footer>
+
   </body>
 </html>
