--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
           <div>
             <div class="kicker">Hyperion</div>
             <h1 class="title-gold">Escalar é consequência.<br/>Estrutura é decisão.</h1>
-            <p>
-              A Hyperion é uma consultoria de software focada em <span class="accent">engenharia, arquitetura e sustentação</span>.
-              Pouco ruído. Decisão técnica com propósito.
+            <p class="text-space">
+              A Hyperion é uma consultoria especializada em engenharia de software, arquitetura de sistemas e sustentação de longo prazo.
+            </p>
+            <p class="text-space">
+              Decisões técnicas profundas, execução limpa e foco absoluto no que realmente importa: construir bases que não quebram quando o negócio cresce.
             </p>
           </div>
         </section>
@@ -55,12 +57,14 @@
           <div>
             <div class="kicker">Posicionamento</div>
             <h2 class="title-gold">Estruturas que sustentam crescimento</h2>
-            <p>
-              Crescer sem base custa caro. Sistemas frágeis não acompanham ambição.
-              Estrutura não é detalhe, é fundamento.
+            <p class="text-space">
+              Crescer sem fundação sólida gera custos que ninguém planeja e limitações que aparecem exatamente quando mais importa. Sistemas frágeis não acompanham ambição real.
             </p>
-            <p>Projetamos e ajustamos estruturas para evoluir com segurança, suportar mudanças e durar no tempo.</p>
-            <p>O foco é reduzir fragilidade, retrabalho e decisões que geram “juros técnicos”.</p>
+
+            <h3 class="title-gold text-title-space font-cinzel">Estrutura não é detalhe técnico. É o alicerce estratégico.</h3>
+            <p class="text-space">
+              Projetamos e refinamos arquiteturas que evoluem com segurança, absorvem mudanças e resistem ao teste do tempo. Nosso foco é eliminar fragilidades, reduzir retrabalho e evitar as decisões que geram juros técnicos silenciosos.
+            </p>
           </div>
         </section>
 
@@ -69,12 +73,25 @@
           <div>
             <div class="kicker">Fit</div>
             <h2 class="title-gold">Poucos projetos. Envolvimento direto.</h2>
-            <p>
-              Para empresas e líderes que entendem que escala não é só volume:
-              crescimento exige preparo e decisão técnica é decisão estratégica.
+            <p class="text-space">
+              Trabalhamos com empresas e líderes que entendem uma coisa simples:
+              escala de verdade não é aumentar volume, é tomar as decisões técnicas certas no momento certo.
             </p>
-            <p class="title-gold">Para times que levam estrutura a sério</p>
-            <p>Contexto real, decisões claras e execução com disciplina. Sem improviso. Sem atalhos.</p>
+
+            <p class="text-space">
+              <span class="accent">
+                Para times que levam estrutura a sério, entregamos:
+                <ul>
+                  <li>Contexto profundo do negócio</li>
+                  <li>Decisões claras e fundamentadas</li>
+                  <li>Execução disciplinada e sem atalhos</li>
+                </ul>              
+              </span>
+            </p>
+
+            <p class="text-space">
+              Sem improviso. Sem soluções “rápidas e sujas”. Apenas resultados que envelhecem bem.
+            </p>
           </div>
         </section>
 
@@ -83,9 +100,15 @@
           <div>
             <div class="kicker">Contato</div>
             <h2 class="title-gold">Vamos conversar.</h2>
-            <p>Contato direto, sem burocracia. Conte seu contexto e o que precisa ser sustentado no longo prazo.</p>
+            <p class="text-space">
+              Contato direto, sem burocracia e sem intermediários.
+              Me conte o contexto real da sua empresa, os desafios de arquitetura ou escalabilidade que você está enfrentando e o que precisa sustentar nos próximos anos.
+
+              Respondo pessoalmente e com agilidade.
+            </p>
             <a class="cta" href="mailto:contato@hyperionroot.com">contato@hyperionroot.com</a>
           </div>
+          <h5 class="font-cinzel">HYPERION • Fundado por Eduardo Eismann • Consultor Independente</h5>
         </section>
       </div>
     </div>
